--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -29,4 +29,5 @@ AppliedDefaultGraphicsPerformance=Maximum
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_FirstPersonBP",NewGameName="/Script/Emergency")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_FirstPersonBP",NewGameName="/Script/Emergency")
+MaximumLoopIterationCount=2147483647
 
