--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -11,9 +11,9 @@ bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
+GameDefaultMap=/Game/FirstPersonBP/Maps/MainMenuLevel.MainMenuLevel
 ServerDefaultMap=/Engine/Maps/Entry
-GlobalDefaultGameMode=/Game/FirstPersonBP/Blueprints/FirstPersonGameMode.FirstPersonGameMode_C
+GlobalDefaultGameMode=/Game/MainMenu/FirstPersonMenuMode.FirstPersonMenuMode_C
 GlobalDefaultServerGameMode=None
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
